--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-tsrouter-app"
     />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - .</title>
+    <title>Focus</title>
   </head>
   <body>
     <div id="app"></div>
